# multiplayer-tic-tac-toe

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/client/: Cargo.toml
crates/client/src/: encryption.rs  gui.rs  login.rs  main.rs  play.rs
crates/common/: Cargo.toml  build.rs  packets.json  version.txt
crates/common/src/: common.rs  lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: gui.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  login.rs  main.rs  play.rs  server.rs
src/: main.rs
