[workspace]
members = ["crates/*"]

[workspace.dependencies]
common = { version = "0.1.0", path = "crates/common" }
server = { version = "0.1.0", path = "crates/server" }
clap = { version = "4.3.11", features = ["derive"] }
integer-encoding = { version = "4.0.0", features = ["tokio_async"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0"
byteorder = "1.4.3"