[workspace]
members = ["crates/*"]

[workspace.dependencies]
common = { version = "0.1.0", path = "crates/common" }
server = { version = "0.1.0", path = "crates/server" }
gui = { version = "0.1.0", path = "crates/gui" }
clap = { version = "4.3.11", features = ["derive"] }
integer-encoding = { version = "4.0.0", features = ["tokio_async"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0"
byteorder = "1.4.3"
parking_lot = "0.5.2"
async-trait = "0.1.73"
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts",
    "glow",
] }
env_logger = "0.10"
image = "0.24.7"
rsa = "0.9.2"