[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
server = { workspace = true }
gui = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
eframe = { workspace = true }
env_logger = { workspace = true }
parking_lot = { workspace = true }
rsa = { workspace = true }