[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
integer-encoding = { workspace = true }
tokio = { workspace = true }
byteorder = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
